--- a/css/styles.css
+++ b/css/styles.css
@@ -110,3 +110,28 @@
         font-size: 18px;
     }
 }
+
+#navbar {
+    overflow: hidden;
+    background-color: #f2f2f2;
+    width: 100%;
+}
+
+
+/* Navbar links */
+
+#navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding-top: 60px;
+}
