--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #222222;
+    background-color: #000;
     border-right: 5px solid #fdb913;
     overflow-x: hidden;
     padding-top: 20px;
@@ -115,6 +115,7 @@
     overflow: hidden;
     background-color: #f2f2f2;
     width: 100%;
+    padding-left: 170px;
 }
 
 
@@ -134,4 +135,63 @@
     top: 0;
     width: 100%;
     padding-top: 60px;
+}
+
+#bottom {
+    background-image: url("../img/bottom-page-div.png");
+    height: 1080px;
+    background-attachment: scroll;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 100%;
+}
+
+.container {
+    overflow: hidden;
+}
+
+.filterDiv {
+    float: left;
+    background-color: #2196F3;
+    color: #ffffff;
+    width: 100px;
+    line-height: 100px;
+    text-align: center;
+    margin: 2px;
+    display: none;
+    /* Hidden by default */
+}
+
+
+/* The "show" class is added to the filtered elements */
+
+.show {
+    display: block;
+}
+
+
+/* Style the buttons */
+
+.btn {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: #f1f1f1;
+    cursor: pointer;
+}
+
+
+/* Add a light grey background on mouse-over */
+
+.btn:hover {
+    background-color: #ddd;
+}
+
+
+/* Add a dark background to the active button */
+
+.btn.active {
+    background-color: #666;
+    color: white;
 }
