--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 0px;
 }
 
 .sidenav {
@@ -115,7 +116,8 @@
     overflow: hidden;
     background-color: #f2f2f2;
     width: 100%;
-    padding-left: 170px;
+    padding: 10px 10px 10px 170px;
+    height: max-content;
 }
 
 
@@ -174,6 +176,8 @@
 /* Style the buttons */
 
 .btn {
+    background-image: url("../img/icons/meat-bw.svg");
+    background-size: contain;
     border: none;
     outline: none;
     padding: 12px 16px;
@@ -194,4 +198,16 @@
 .btn.active {
     background-color: #666;
     color: white;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.flex-container img {
+    height: 60px;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
