--- a/css/styles.css
+++ b/css/styles.css
@@ -203,11 +203,22 @@
 .flex-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .flex-container img {
     height: 60px;
     padding-bottom: 10px;
     padding-top: 10px;
+}
+
+#icon {
+    vertical-align: top;
+    display: inline-block;
+    text-align: center;
+    width: 120px;
+}
+
+.caption {
+    display: block;
 }
