--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@
 #menu {
     border-top: 5px solid #fdb913;
     background-image: url("../img/grey-background.png");
-    height: 1080px;
+    height: max-content;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -153,31 +153,12 @@
     overflow: hidden;
 }
 
-.filterDiv {
-    float: left;
-    background-color: #2196F3;
-    color: #ffffff;
-    width: 100px;
-    line-height: 100px;
-    text-align: center;
-    margin: 2px;
-    display: none;
-    /* Hidden by default */
-}
-
-
-/* The "show" class is added to the filtered elements */
-
-.show {
-    display: block;
-}
-
 
 /* Add a dark background to the active button */
 
 .btn.active {
-    background-color: #666;
-    color: white;
+    background-color: #fdb913;
+    border-color: #fdb913;
 }
 
 .flex-container {
@@ -201,4 +182,68 @@
 
 .caption {
     display: block;
+}
+
+#pizza {
+    margin: 20px;
+    padding: 5px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.circle {
+    margin: 20px 0 0 20px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+    -webkit-transition: all 0.7s ease-out;
+    -moz-transition: all 0.7s ease-out;
+    -o-transition: all 0.7s ease-out;
+    transition: all 0.7s ease-out;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 20px 20px 20px;
+}
+
+.circle>img {
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    padding: 0px;
+}
+
+.circle:hover {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.pizza-des {
+    width: 300px;
+}
+
+#menu-items {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 160px;
+    margin-top: 100px;
+}
+
+.filterDiv {
+    display: none;
+    /* Hidden by default */
+}
+
+
+/* The "show" class is added to the filtered elements */
+
+.show {
+    background-color: #f1f1f1;
+    display: flex;
 }
