--- a/css/styles.css
+++ b/css/styles.css
@@ -256,4 +256,20 @@
     display: flex;
 }
 
-.order {}
+.order {
+    border: none;
+    background-color: black;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.order:hover {
+    background-color: #222222;
+}
